rust/dparser_lib/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of D_ErrorRecoveryHint"][::std::mem::size_of::<D_ErrorRecoveryHint>() - 16usize];
    ["Alignment of D_ErrorRecoveryHint"][::std::mem::align_of::<D_ErrorRecoveryHint>() - 8usize];
    ["Offset of field: D_ErrorRecoveryHint::depth"]
        [::std::mem::offset_of!(D_ErrorRecoveryHint, depth) - 0usize];
    ["Offset of field: D_ErrorRecoveryHint::symbol"]
        [::std::mem::offset_of!(D_ErrorRecoveryHint, symbol) - 2usize];
    ["Offset of field: D_ErrorRecoveryHint::string"]
        [::std::mem::offset_of!(D_ErrorRecoveryHint, string) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_Shift {
    pub symbol: ::std::os::raw::c_ushort,
    pub shift_kind: ::std::os::raw::c_uchar,
    pub op_assoc: ::std::os::raw::c_uchar,
    pub op_priority: ::std::os::raw::c_int,
    pub term_priority: ::std::os::raw::c_int,
    pub action_index: ::std::os::raw::c_int,
    pub speculative_code: D_ReductionCode,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of D_Shift"][::std::mem::size_of::<D_Shift>() - 24usize];
    ["Alignment of D_Shift"][::std::mem::align_of::<D_Shift>() - 8usize];
    ["Offset of field: D_Shift::symbol"][::std::mem::offset_of!(D_Shift, symbol) - 0usize];
    ["Offset of field: D_Shift::shift_kind"][::std::mem::offset_of!(D_Shift, shift_kind) - 2usize];
    ["Offset of field: D_Shift::op_assoc"][::std::mem::offset_of!(D_Shift, op_assoc) - 3usize];
    ["Offset of field: D_Shift::op_priority"]
        [::std::mem::offset_of!(D_Shift, op_priority) - 4usize];
    ["Offset of field: D_Shift::term_priority"]
        [::std::mem::offset_of!(D_Shift, term_priority) - 8usize];
    ["Offset of field: D_Shift::action_index"]
        [::std::mem::offset_of!(D_Shift, action_index) - 12usize];
    ["Offset of field: D_Shift::speculative_code"]
        [::std::mem::offset_of!(D_Shift, speculative_code) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SB_uint8 {
    pub shift: *mut *mut D_Shift,
    pub scanner_block: [*mut ::std::os::raw::c_uchar; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of SB_uint8"][::std::mem::size_of::<SB_uint8>() - 40usize];
    ["Alignment of SB_uint8"][::std::mem::align_of::<SB_uint8>() - 8usize];
    ["Offset of field: SB_uint8::shift"][::std::mem::offset_of!(SB_uint8, shift) - 0usize];
    ["Offset of field: SB_uint8::scanner_block"]
        [::std::mem::offset_of!(SB_uint8, scanner_block) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SB_uint16 {
    pub shift: *mut *mut D_Shift,
    pub scanner_block: [*mut ::std::os::raw::c_ushort; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of SB_uint16"][::std::mem::size_of::<SB_uint16>() - 40usize];
    ["Alignment of SB_uint16"][::std::mem::align_of::<SB_uint16>() - 8usize];
    ["Offset of field: SB_uint16::shift"][::std::mem::offset_of!(SB_uint16, shift) - 0usize];
    ["Offset of field: SB_uint16::scanner_block"]
        [::std::mem::offset_of!(SB_uint16, scanner_block) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SB_uint32 {
    pub shift: *mut *mut D_Shift,
    pub scanner_block: [*mut ::std::os::raw::c_uint; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of SB_uint32"][::std::mem::size_of::<SB_uint32>() - 40usize];
    ["Alignment of SB_uint32"][::std::mem::align_of::<SB_uint32>() - 8usize];
    ["Offset of field: SB_uint32::shift"][::std::mem::offset_of!(SB_uint32, shift) - 0usize];
    ["Offset of field: SB_uint32::scanner_block"]
        [::std::mem::offset_of!(SB_uint32, scanner_block) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SB_trans_uint8 {
    pub scanner_block: [*mut ::std::os::raw::c_uchar; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of SB_trans_uint8"][::std::mem::size_of::<SB_trans_uint8>() - 32usize];
    ["Alignment of SB_trans_uint8"][::std::mem::align_of::<SB_trans_uint8>() - 8usize];
    ["Offset of field: SB_trans_uint8::scanner_block"]
        [::std::mem::offset_of!(SB_trans_uint8, scanner_block) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SB_trans_uint16 {
    pub scanner_block: [*mut ::std::os::raw::c_ushort; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of SB_trans_uint16"][::std::mem::size_of::<SB_trans_uint16>() - 32usize];
    ["Alignment of SB_trans_uint16"][::std::mem::align_of::<SB_trans_uint16>() - 8usize];
    ["Offset of field: SB_trans_uint16::scanner_block"]
        [::std::mem::offset_of!(SB_trans_uint16, scanner_block) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SB_trans_uint32 {
    pub scanner_block: [*mut ::std::os::raw::c_uint; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of SB_trans_uint32"][::std::mem::size_of::<SB_trans_uint32>() - 32usize];
    ["Alignment of SB_trans_uint32"][::std::mem::align_of::<SB_trans_uint32>() - 8usize];
    ["Offset of field: SB_trans_uint32::scanner_block"]
        [::std::mem::offset_of!(SB_trans_uint32, scanner_block) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_State {
    pub goto_valid: *mut ::std::os::raw::c_uchar,
    pub goto_table_offset: ::std::os::raw::c_int,
    pub reductions: D_State__bindgen_ty_1,
    pub right_epsilon_hints: D_State__bindgen_ty_2,
    pub error_recovery_hints: D_State__bindgen_ty_3,
    pub shifts: ::std::os::raw::c_int,
    pub scanner_code: D_ScanCode,
    pub scanner_table: *mut ::std::os::raw::c_void,
    pub scanner_size: ::std::os::raw::c_uchar,
    pub accept: ::std::os::raw::c_uchar,
    pub scan_kind: ::std::os::raw::c_uchar,
    pub transition_table: *mut ::std::os::raw::c_void,
    pub accepts_diff: *mut *mut *mut D_Shift,
    pub reduces_to: ::std::os::raw::c_int,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_State__bindgen_ty_1 {
    pub n: ::std::os::raw::c_uint,
    pub v: *mut *mut D_Reduction,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of D_State__bindgen_ty_1"][::std::mem::size_of::<D_State__bindgen_ty_1>() - 16usize];
    ["Alignment of D_State__bindgen_ty_1"]
        [::std::mem::align_of::<D_State__bindgen_ty_1>() - 8usize];
    ["Offset of field: D_State__bindgen_ty_1::n"]
        [::std::mem::offset_of!(D_State__bindgen_ty_1, n) - 0usize];
    ["Offset of field: D_State__bindgen_ty_1::v"]
        [::std::mem::offset_of!(D_State__bindgen_ty_1, v) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_State__bindgen_ty_2 {
    pub n: ::std::os::raw::c_uint,
    pub v: *mut D_RightEpsilonHint,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of D_State__bindgen_ty_2"][::std::mem::size_of::<D_State__bindgen_ty_2>() - 16usize];
    ["Alignment of D_State__bindgen_ty_2"]
        [::std::mem::align_of::<D_State__bindgen_ty_2>() - 8usize];
    ["Offset of field: D_State__bindgen_ty_2::n"]
        [::std::mem::offset_of!(D_State__bindgen_ty_2, n) - 0usize];
    ["Offset of field: D_State__bindgen_ty_2::v"]
        [::std::mem::offset_of!(D_State__bindgen_ty_2, v) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_State__bindgen_ty_3 {
    pub n: ::std::os::raw::c_uint,
    pub v: *mut D_ErrorRecoveryHint,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of D_State__bindgen_ty_3"][::std::mem::size_of::<D_State__bindgen_ty_3>() - 16usize];
    ["Alignment of D_State__bindgen_ty_3"]
        [::std::mem::align_of::<D_State__bindgen_ty_3>() - 8usize];
    ["Offset of field: D_State__bindgen_ty_3::n"]
        [::std::mem::offset_of!(D_State__bindgen_ty_3, n) - 0usize];
    ["Offset of field: D_State__bindgen_ty_3::v"]
        [::std::mem::offset_of!(D_State__bindgen_ty_3, v) - 8usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of D_State"][::std::mem::size_of::<D_State>() - 120usize];
    ["Alignment of D_State"][::std::mem::align_of::<D_State>() - 8usize];
    ["Offset of field: D_State::goto_valid"][::std::mem::offset_of!(D_State, goto_valid) - 0usize];
    ["Offset of field: D_State::goto_table_offset"]
        [::std::mem::offset_of!(D_State, goto_table_offset) - 8usize];
    ["Offset of field: D_State::reductions"][::std::mem::offset_of!(D_State, reductions) - 16usize];
    ["Offset of field: D_State::right_epsilon_hints"]
        [::std::mem::offset_of!(D_State, right_epsilon_hints) - 32usize];
    ["Offset of field: D_State::error_recovery_hints"]
        [::std::mem::offset_of!(D_State, error_recovery_hints) - 48usize];
    ["Offset of field: D_State::shifts"][::std::mem::offset_of!(D_State, shifts) - 64usize];
    ["Offset of field: D_State::scanner_code"]
        [::std::mem::offset_of!(D_State, scanner_code) - 72usize];
    ["Offset of field: D_State::scanner_table"]
        [::std::mem::offset_of!(D_State, scanner_table) - 80usize];
    ["Offset of field: D_State::scanner_size"]
        [::std::mem::offset_of!(D_State, scanner_size) - 88usize];
    ["Offset of field: D_State::accept"][::std::mem::offset_of!(D_State, accept) - 89usize];
    ["Offset of field: D_State::scan_kind"][::std::mem::offset_of!(D_State, scan_kind) - 90usize];
    ["Offset of field: D_State::transition_table"]
        [::std::mem::offset_of!(D_State, transition_table) - 96usize];
    ["Offset of field: D_State::accepts_diff"]
        [::std::mem::offset_of!(D_State, accepts_diff) - 104usize];
    ["Offset of field: D_State::reduces_to"]
        [::std::mem::offset_of!(D_State, reduces_to) - 112usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_Symbol {
    pub kind: ::std::os::raw::c_uint,
    pub name: *const ::std::os::raw::c_char,
    pub name_len: ::std::os::raw::c_int,
    pub start_symbol: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of D_Symbol"][::std::mem::size_of::<D_Symbol>() - 24usize];
    ["Alignment of D_Symbol"][::std::mem::align_of::<D_Symbol>() - 8usize];
    ["Offset of field: D_Symbol::kind"][::std::mem::offset_of!(D_Symbol, kind) - 0usize];
    ["Offset of field: D_Symbol::name"][::std::mem::offset_of!(D_Symbol, name) - 8usize];
    ["Offset of field: D_Symbol::name_len"][::std::mem::offset_of!(D_Symbol, name_len) - 16usize];
    ["Offset of field: D_Symbol::start_symbol"]
        [::std::mem::offset_of!(D_Symbol, start_symbol) - 20usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_Pass {
    pub name: *mut ::std::os::raw::c_char,
    pub name_len: ::std::os::raw::c_uint,
    pub kind: ::std::os::raw::c_uint,
    pub index: ::std::os::raw::c_uint,
}
